--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -34,11 +34,13 @@
     "br-docs-validator": "^0.2.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.13",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.36.4",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.13.1",
+    "xlsx": "^0.18.5",
     "zod": "^3.23.8"
   }
 }
