--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -22,6 +22,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.7",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.9.3",
     "@types/pg": "^8.11.10",
     "drizzle-kit": "^0.28.1",
@@ -41,6 +42,7 @@
     "express": "^4.21.1",
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^9.0.2",
+    "multer": "1.4.5-lts.1",
     "pg": "^8.13.1",
     "xlsx": "^0.18.5",
     "zod": "^3.23.8"
